[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/shield.png" type="Texture" id=1]
[ext_resource path="res://power_ups/powerup_escudo.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0
height = 0.0

[node name="powerup_escudo" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="powerup_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="powerup_area"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="powerup_area" to="." method="_on_powerup_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
